# opencode-spec-iter

./: .gitignore  AGENTS.md  LICENSE  README.md  clify.spec.md  install.py  pyproject.toml  run.spec.md
docs/: generate_agentsmd.md  generate_plan.md  iter_manager.md  next_steps.md
spec_iter/: __init__.py  cli.py  init.py  iterations.py  project.py  prompts.py  run_ops.py
spec_iter/bundled_src/commands/: agentsmd.md  exec.md  list-iters.md  plan.md  post.md  spec.md
spec_iter/bundled_src/scripts/: iter_manager.py  prompt-agentsmd.py  prompt-post.py
spec_iter/command_prompts/: agentsmd_inspect_workspace.md  agentsmd_intro_with.md  agentsmd_write_block.md  exec.md  plan.md  post.md  spec.md
spec_iter/commands/: exec.md  plan.md  spec.md
spec_iter/subagent_prompts/: exec-phase.md  research.md
spec_iter/templates/: agentsmd_focus_existing.md  agentsmd_intro_without.md  agentsmd_write_block.md  exec.md  post.md
src/: gitignore
src/commands/: agentsmd.md  exec.md  init-project.md  list-iters.md  plan.md  post.md  spec.md
src/scripts/: init-project.py  iter-manager.py  iter_manager.py  prompt-agentsmd.py  prompt-exec.py  prompt-plan.py  prompt-post.py
